--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./custom.css" />
   </head>
-  <body style="width: 100vw" class="d-flex flex-column ">
+  <body style="width: 100vw;" class="d-flex flex-column ">
    
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark nav-color " >
       <a href="#" class="navbar-brand me-5">Camilux</a>
